--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "aws-sdk": "^2.1550.0",
+    "express": "^4.18.2",
     "https": "^1.0.0",
-    "uuid": "^9.0.1"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
+    "yamljs": "^0.3.0"
   }
 }
