--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "aws-sdk": "^2.1550.0",
+    "date-fns": "^3.3.1",
     "express": "^4.18.2",
     "https": "^1.0.0",
     "swagger-ui-express": "^5.0.0",
