--- a/serverless.yml
+++ b/serverless.yml
@@ -31,6 +31,12 @@ functions:
       - httpApi:
           path: /droide
           method: post
+  getDroides:
+    handler: src/getDroides.getDroides
+    events:
+      - httpApi:
+          path: /droides
+          method: get
 
 resources:
   Resources:
